[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/oGameCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PlayerStart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/LevelBase.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Kill_Zone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Cartoon_Tileset.tres" type="TileSet" id=5]
[ext_resource path="res://Scenes/Reverse_Direction.tscn" type="PackedScene" id=6]

[node name="Level" type="Node2D" groups=[
"Game",
]]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "You will need:
   -An Autumn..
   -A Zophia...
   -And a oGameCamera
"
}

[node name="Kill_Zone" parent="." instance=ExtResource( 4 )]
position = Vector2( 504, 416 )
rotation = 1.5708
scale = Vector2( 1, 82.5313 )

[node name="Player_Start" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" parent="." instance=ExtResource( 1 )]
position = Vector2( -28, 48 )

[node name="TileMap_Level" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262140, 1, 0, 262141, 1, 1, 262142, 1, 1, 262143, 1, 1, 196608, 1, 1, 196609, 1, 1, 196610, 1, 1, 196611, 1, 1, 196612, 1, 1, 196613, 1, 1, 196614, 1, 1, 196615, 1, 1, 196616, 1, 1, 196617, 1, 1, 196618, 1, 1, 196619, 1, 1, 196620, 1, 1, 196621, 1, 1, 196622, 1, 2, 327676, 1, 65536, 327677, 1, 65537, 327678, 1, 65537, 327679, 1, 65537, 262144, 1, 65537, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65537, 262150, 1, 65537, 262151, 1, 65537, 262152, 1, 65537, 262153, 1, 65537, 262154, 1, 65537, 262155, 1, 65537, 262156, 1, 65537, 262157, 1, 65537, 262158, 1, 65538, 262159, 0, 0, 262160, 0, 1, 262161, 0, 2, 262183, 1, 0, 262184, 1, 2, 393212, 1, 65536, 393213, 1, 65537, 393214, 1, 65537, 393215, 1, 65537, 327680, 1, 65537, 327681, 1, 65537, 327682, 1, 65537, 327683, 1, 65537, 327684, 1, 65537, 327685, 1, 65537, 327686, 1, 65537, 327687, 1, 65537, 327688, 1, 65537, 327689, 1, 65537, 327690, 1, 65537, 327691, 1, 65537, 327692, 1, 65537, 327693, 1, 65537, 327694, 1, 65538, 327695, 0, 65536, 327696, 0, 65537, 327697, 0, 65538, 327713, 0, 0, 327714, 0, 1, 327715, 0, 1, 327716, 0, 1, 327717, 0, 1, 327718, 0, 2, 327719, 1, 65536, 327720, 1, 65538, 327721, 0, 0, 327722, 0, 1, 327723, 0, 1, 327724, 0, 1, 327725, 0, 1, 327726, 0, 1, 327727, 0, 1, 327728, 0, 2, 458745, 1, 0, 458746, 1, 1, 458747, 1, 1, 458748, 1, 65540, 458749, 1, 65537, 458750, 1, 65537, 458751, 1, 65537, 393216, 1, 65537, 393217, 1, 65537, 393218, 1, 65537, 393219, 1, 65537, 393220, 1, 65537, 393221, 1, 65537, 393222, 1, 65537, 393223, 1, 65537, 393224, 1, 65537, 393225, 1, 65537, 393226, 1, 65537, 393227, 1, 65537, 393228, 1, 65537, 393229, 1, 65537, 393230, 1, 65538, 393231, 0, 131072, 393232, 0, 4, 393233, 0, 65539, 393234, 0, 1, 393235, 0, 1, 393236, 0, 2, 393249, 0, 65536, 393250, 0, 65537, 393251, 0, 65537, 393252, 0, 65537, 393253, 0, 65537, 393254, 0, 65538, 393255, 1, 65536, 393256, 1, 65538, 393257, 0, 65536, 393258, 0, 65537, 393259, 0, 65537, 393260, 0, 65537, 393261, 0, 65537, 393262, 0, 65537, 393263, 0, 65537, 393264, 0, 65538, 524281, 1, 65536, 524282, 1, 65537, 524283, 1, 65537, 524284, 1, 65537, 524285, 1, 65537, 524286, 1, 65537, 524287, 1, 3, 458752, 1, 131073, 458753, 1, 131073, 458754, 1, 131073, 458755, 1, 131073, 458756, 1, 131073, 458757, 1, 131073, 458758, 1, 131073, 458759, 1, 131073, 458760, 1, 131073, 458761, 1, 131073, 458762, 1, 131073, 458763, 1, 131073, 458764, 1, 131073, 458765, 1, 131073, 458766, 1, 131074, 458768, 0, 131072, 458769, 0, 4, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65539, 458773, 0, 1, 458774, 0, 2, 458785, 0, 65536, 458786, 0, 65537, 458787, 0, 65537, 458788, 0, 3, 458789, 0, 131073, 458790, 0, 131074, 458791, 1, 131072, 458792, 1, 131074, 458793, 0, 131072, 458794, 0, 131073, 458795, 0, 4, 458796, 0, 3, 458797, 0, 131073, 458798, 0, 4, 458799, 0, 65537, 458800, 0, 65538, 589817, 1, 65536, 589818, 1, 65537, 589819, 1, 65537, 589820, 1, 65537, 589821, 1, 65537, 589822, 1, 65537, 589823, 1, 65538, 524305, 0, 65536, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65538, 524321, 0, 65536, 524322, 0, 65537, 524323, 0, 65537, 524324, 0, 65538, 524326, 0, 0, 524327, 0, 1, 524328, 0, 1, 524329, 0, 2, 524331, 0, 65536, 524332, 0, 65538, 524334, 0, 65536, 524335, 0, 65537, 524336, 0, 65538, 655353, 1, 65536, 655354, 1, 65537, 655355, 1, 65537, 655356, 1, 65537, 655357, 1, 65537, 655358, 1, 65537, 655359, 1, 65538, 589827, 1, 0, 589828, 1, 2, 589841, 0, 131072, 589842, 0, 131073, 589843, 0, 131073, 589844, 0, 4, 589845, 0, 65537, 589846, 0, 65539, 589847, 0, 1, 589848, 0, 1, 589849, 0, 1, 589850, 0, 1, 589851, 0, 1, 589852, 0, 1, 589853, 0, 2, 589857, 0, 65536, 589858, 0, 65537, 589859, 0, 65537, 589860, 0, 65539, 589861, 0, 1, 589862, 0, 65540, 589863, 0, 65537, 589864, 0, 65537, 589865, 0, 65539, 589866, 0, 1, 589867, 0, 65540, 589868, 0, 65539, 589869, 0, 1, 589870, 0, 65540, 589871, 0, 65537, 589872, 0, 65538, 720889, 1, 131072, 720890, 1, 131073, 720891, 1, 131073, 720892, 1, 131073, 720893, 1, 4, 720894, 1, 65537, 720895, 1, 65539, 655360, 1, 1, 655361, 1, 1, 655362, 1, 1, 655363, 1, 65540, 655364, 1, 65538, 655380, 0, 131072, 655381, 0, 4, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65538, 655393, 0, 65536, 655394, 0, 65537, 655395, 0, 65537, 655396, 0, 65537, 655397, 0, 65537, 655398, 0, 65537, 655399, 0, 65537, 655400, 0, 65537, 655401, 0, 65537, 655402, 0, 65537, 655403, 0, 65537, 655404, 0, 65537, 655405, 0, 65537, 655406, 0, 65537, 655407, 0, 65537, 655408, 0, 65538, 786429, 1, 131072, 786430, 1, 131073, 786431, 1, 131073, 720896, 1, 131073, 720897, 1, 131073, 720898, 1, 131073, 720899, 1, 4, 720900, 1, 65538, 720917, 0, 131072, 720918, 0, 131073, 720919, 0, 131073, 720920, 0, 131073, 720921, 0, 131073, 720922, 0, 131073, 720923, 0, 131073, 720924, 0, 131073, 720925, 0, 131074, 720929, 0, 131072, 720930, 0, 131073, 720931, 0, 131073, 720932, 0, 131073, 720933, 0, 131073, 720934, 0, 131073, 720935, 0, 131073, 720936, 0, 131073, 720937, 0, 131073, 720938, 0, 131073, 720939, 0, 131073, 720940, 0, 131073, 720941, 0, 131073, 720942, 0, 131073, 720943, 0, 131073, 720944, 0, 131074, 786435, 1, 131072, 786436, 1, 131074, 983062, 5, 0, 983063, 5, 1, 983064, 5, 1, 983065, 5, 1, 983066, 5, 2, 1048598, 5, 65536, 1048599, 5, 65537, 1048600, 5, 65537, 1048601, 5, 65537, 1048602, 5, 65538, 1048608, 6, 0, 1048609, 6, 1, 1048610, 6, 1, 1048611, 6, 1, 1048612, 6, 1, 1048613, 6, 2, 1114134, 5, 65536, 1114135, 5, 65537, 1114136, 5, 65537, 1114137, 5, 65537, 1114138, 5, 65539, 1114139, 5, 1, 1114140, 5, 2, 1114144, 6, 65536, 1114145, 6, 3, 1114146, 6, 131073, 1114147, 6, 4, 1114148, 6, 65537, 1114149, 6, 65538, 1179670, 5, 131072, 1179671, 5, 131073, 1179672, 5, 131073, 1179673, 5, 4, 1179674, 5, 65537, 1179675, 5, 65537, 1179676, 5, 65538, 1179680, 6, 65536, 1179681, 6, 65538, 1179683, 6, 65536, 1179684, 6, 65537, 1179685, 6, 65539, 1179686, 6, 1, 1179687, 6, 1, 1179688, 6, 2, 1245209, 5, 65536, 1245210, 5, 65537, 1245211, 5, 65537, 1245212, 5, 65538, 1245216, 6, 65536, 1245217, 6, 65539, 1245218, 6, 1, 1245219, 6, 65540, 1245220, 6, 65537, 1245221, 6, 65537, 1245222, 6, 65537, 1245223, 6, 65537, 1245224, 6, 65538, 1310745, 5, 131072, 1310746, 5, 131073, 1310747, 5, 131073, 1310748, 5, 131074, 1310752, 6, 131072, 1310753, 6, 131073, 1310754, 6, 131073, 1310755, 6, 4, 1310756, 6, 65537, 1310757, 6, 65537, 1310758, 6, 65537, 1310759, 6, 65537, 1310760, 6, 65538, 1376291, 6, 65536, 1376292, 6, 65537, 1376293, 6, 65537, 1376294, 6, 65537, 1376295, 6, 65537, 1376296, 6, 65538, 1441827, 6, 131072, 1441828, 6, 131073, 1441829, 6, 131073, 1441830, 6, 131073, 1441831, 6, 131073, 1441832, 6, 131074 )

[node name="Reverse_Direction" parent="." instance=ExtResource( 6 )]
position = Vector2( 220, 36 )
bIsFlipped = true

[node name="Reverse_Direction2" parent="." instance=ExtResource( 6 )]
position = Vector2( -52, 36 )
